# hellodb

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.claude-plugin/: marketplace.json
.claude/commands/: hellodb-review.md
.github/workflows/: ci.yml
crates/hellodb-auth/: Cargo.toml
crates/hellodb-auth/src/: access.rs  consent.rs  delegation.rs  error.rs  lib.rs
crates/hellodb-brain/src/: config.rs  digest.rs  main.rs
crates/hellodb-cli/src/: main.rs
crates/hellodb-core/: Cargo.toml
crates/hellodb-core/src/: branch.rs  canonical.rs  error.rs  lib.rs  namespace.rs  record.rs  schema.rs
crates/hellodb-crypto/: Cargo.toml
crates/hellodb-crypto/src/: encryption.rs  error.rs  hash.rs  identity.rs  keychain.rs  lib.rs
crates/hellodb-mcp/src/: protocol.rs  server.rs
crates/hellodb-query/: Cargo.toml
crates/hellodb-query/src/: cursor.rs  engine.rs  error.rs  filter.rs  lib.rs  query.rs  sort.rs
crates/hellodb-storage/: Cargo.toml
crates/hellodb-storage/src/: engine.rs  error.rs  lib.rs  memory.rs  sqlite.rs  wal.rs
crates/hellodb-sync/: Cargo.toml
crates/hellodb-sync/src/: backend.rs  conflict.rs  delta.rs  engine.rs  error.rs  fs_backend.rs  gateway_backend.rs  lib.rs  manifest.rs  memory_backend.rs
gateway/src/: embed.ts  r2.ts
installer/: package.json  wrangler.jsonc
installer/src/: index.ts
landing/: next.config.ts  package.json  pnpm-lock.yaml
landing/app/: globals.css  icon.tsx  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
landing/app/blog/: page.tsx
landing/app/blog/context-is-triage-memory-is-engineering/: page.tsx
landing/components/site/: brain-loop.tsx  code-block.tsx  comparison.tsx  console-sig.tsx  context-vs-memory.tsx  footer.tsx  gateway-diagram.tsx  hero-filetree.tsx  hero-pipeline.tsx  hero.tsx  in-action.tsx  install.tsx  nav.tsx  properties.tsx  section-divider.tsx  section.tsx
landing/public/: _headers
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  run-digest-async.sh
plugin/skills/digest-now/: SKILL.md
plugin/skills/hellodb-memorize/: SKILL.md
plugin/skills/hellodb-review/: SKILL.md
plugin/skills/memorize/: SKILL.md
plugin/skills/recall/: SKILL.md
plugin/skills/review/: SKILL.md
scripts/: install.ps1  install.sh  onboard.sh
tests/: integration.rs  phase1_integration.rs
