[package]
name = "hellodb-crypto"
description = "Cryptographic primitives for hellodb: signing, encryption, content hashing, key derivation"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
