[package]
name = "hellodb-query"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hellodb-crypto = { workspace = true }
hellodb-core = { workspace = true }
hellodb-storage = { workspace = true }
hellodb-auth = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
